[gd_scene load_steps=10 format=3 uid="uid://c54f3klsccbln"]

[ext_resource type="Script" path="res://Script/ParallaxBackground.gd" id="1_bvbcs"]
[ext_resource type="Texture2D" uid="uid://k4ot52o4rq66" path="res://Asset/parallax background/plx-1.png" id="2_uf7ub"]
[ext_resource type="Texture2D" uid="uid://c6ojdtp6sl7of" path="res://Asset/parallax background/plx-2.png" id="3_mpljn"]
[ext_resource type="Texture2D" uid="uid://bmslvodpinybx" path="res://Asset/parallax background/plx-3.png" id="4_htkqj"]
[ext_resource type="Texture2D" uid="uid://qq4hkvbsdeqm" path="res://Asset/parallax background/plx-4.png" id="5_is8ej"]
[ext_resource type="Texture2D" uid="uid://cugdcqkndv1" path="res://Asset/parallax background/plx-5.png" id="6_l5g8t"]
[ext_resource type="Script" path="res://Script/Controlls.gd" id="7_1y276"]
[ext_resource type="Theme" uid="uid://c5mk51k51gcl3" path="res://Themes/button_theme.tres" id="7_qhr8k"]
[ext_resource type="AudioStream" uid="uid://ddghtajwx7ybk" path="res://Asset/SFX/click.wav" id="10_rawsk"]

[node name="controlls" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("1_bvbcs")

[node name="ParallaxLayer1" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1280, 0)

[node name="Plx-1" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer1"]
position = Vector2(640, 358)
scale = Vector2(3.33333, 3.35185)
texture = ExtResource("2_uf7ub")

[node name="Plx-2" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer1"]
position = Vector2(640, 360)
scale = Vector2(3.33333, 3.33333)
texture = ExtResource("3_mpljn")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(2, 2)
motion_mirroring = Vector2(1280, 0)

[node name="Plx-3" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(640, 361)
scale = Vector2(3.33333, 3.32407)
texture = ExtResource("4_htkqj")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(2, 2)
motion_mirroring = Vector2(1280, 0)

[node name="Plx-4" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2(640, 360)
scale = Vector2(3.33333, 3.33333)
texture = ExtResource("5_is8ej")

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(4, 4)
motion_mirroring = Vector2(1280, 0)

[node name="Plx-5" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(640, 360)
scale = Vector2(3.33333, 3.33333)
texture = ExtResource("6_l5g8t")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 150
script = ExtResource("7_1y276")

[node name="Player1" type="BoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1
vertical = true

[node name="Player1" type="Label" parent="HBoxContainer/Player1"]
layout_mode = 2
theme = ExtResource("7_qhr8k")
text = "Player1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="HBoxContainer/Player1"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 2

[node name="left" type="HBoxContainer" parent="HBoxContainer/Player1"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="A_Button" type="Button" parent="HBoxContainer/Player1/left"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "  A  "

[node name="Label" type="Label" parent="HBoxContainer/Player1/left"]
layout_mode = 2
text = "Left"
horizontal_alignment = 1

[node name="right" type="HBoxContainer" parent="HBoxContainer/Player1"]
layout_mode = 2
size_flags_horizontal = 0

[node name="D_Button" type="Button" parent="HBoxContainer/Player1/right"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "  D  "

[node name="Label" type="Label" parent="HBoxContainer/Player1/right"]
layout_mode = 2
text = "Right"

[node name="top" type="HBoxContainer" parent="HBoxContainer/Player1"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="W_Button" type="Button" parent="HBoxContainer/Player1/top"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = " W "

[node name="Label" type="Label" parent="HBoxContainer/Player1/top"]
layout_mode = 2
text = " Jump"
horizontal_alignment = 1
vertical_alignment = 1

[node name="bottom" type="HBoxContainer" parent="HBoxContainer/Player1"]
layout_mode = 2
size_flags_horizontal = 0

[node name="S_Button" type="Button" parent="HBoxContainer/Player1/bottom"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "  S  "

[node name="Label" type="Label" parent="HBoxContainer/Player1/bottom"]
layout_mode = 2
text = "Attack"

[node name="Start_Menu" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Back" type="Button" parent="HBoxContainer/Start_Menu"]
layout_mode = 2
theme = ExtResource("7_qhr8k")
text = "  Back  "

[node name="Player2" type="BoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1
vertical = true

[node name="Player2" type="Label" parent="HBoxContainer/Player2"]
layout_mode = 2
theme = ExtResource("7_qhr8k")
text = "Player2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="HBoxContainer/Player2"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 2

[node name="left" type="HBoxContainer" parent="HBoxContainer/Player2"]
layout_mode = 2

[node name="A_Button" type="Button" parent="HBoxContainer/Player2/left"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = " ← "

[node name="Label" type="Label" parent="HBoxContainer/Player2/left"]
layout_mode = 2
text = "Left"
vertical_alignment = 1

[node name="right" type="HBoxContainer" parent="HBoxContainer/Player2"]
layout_mode = 2

[node name="D_Button" type="Button" parent="HBoxContainer/Player2/right"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = " → "

[node name="Label" type="Label" parent="HBoxContainer/Player2/right"]
layout_mode = 2
text = "Right"
vertical_alignment = 1

[node name="top" type="HBoxContainer" parent="HBoxContainer/Player2"]
layout_mode = 2

[node name="W_Button" type="Button" parent="HBoxContainer/Player2/top"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "  ↑  "

[node name="Label" type="Label" parent="HBoxContainer/Player2/top"]
layout_mode = 2
text = "Jump"
vertical_alignment = 1

[node name="bottom" type="HBoxContainer" parent="HBoxContainer/Player2"]
layout_mode = 2

[node name="S_Button" type="Button" parent="HBoxContainer/Player2/bottom"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "  ↓  "

[node name="Label" type="Label" parent="HBoxContainer/Player2/bottom"]
layout_mode = 2
text = "Attack"
vertical_alignment = 1

[node name="click_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_rawsk")
volume_db = -14.0
autoplay = true

[connection signal="pressed" from="HBoxContainer/Start_Menu/Back" to="HBoxContainer" method="_on_back_pressed"]
